--- a/charlas/ruby/scripting/md/01.md
+++ b/charlas/ruby/scripting/md/01.md
@@ -8,28 +8,27 @@
 ¡Muchas gracias!
 
 Me presento:
+* David Vargas Ruiz
+* Ingeniero Informático ULPGC
+* Profesor FP Sistemas y Aplicaciones
+
 ```
-me = {
-  :name    => “David Vargas Ruiz”,
-  :studies => “Ing. Informático ULPGC”,
-  :job     = > “Profesor FP Informática”,
-  :twitter => @dvarrui,
-  :github  => dvarrui,
-  :email   => dvarrui@protonmail.com
-}
+Datos de contacto:
+  twitter => @dvarrui
+  github  => dvarrui
+  email   => dvarrui@protonmail.com
 ```
 
 Mi discurso está condicionado:
 * **Sysadmin**: Profesor de sistemas operativos en ASIR
-* **Programación**:
-    * OOP y PF fan.
-    * Trabajar bien, rápido y sin complicarse.
-    * Dar a conocer Ruby más allá de Rails.
+* **Programación**: OOP y PF fan.
+* Dar a conocer **Ruby** más allá de Rails.
+* Trabajar bien, rápido y sin complicarse.
 * **Software Libre**: _¡Este es el camino!_
 
 # Agenda
 
 1. El problema
-2. Scripting
-3. Bash
-4. Ruby
+1. Shell Scripting
+1. Mi definición de Scripting
+1. Ruby Scripting
