--- a/charlas/ruby/scripting/md/02.md
+++ b/charlas/ruby/scripting/md/02.md
@@ -1,6 +1,18 @@
 
-# 1. El problema
+# El problema
 
-* Impartir el módulo de sistemas operativos en FP.
-* Poco tiempo para enseñar scripting: Bash(GNU/Linux), PowerShell(Windows).
+Situación:
+* Impartir el módulo de sistemas operativos en FP (2005-2006)
+* Poco tiempo para enseñar scripting y varias alternativas por plataforma.
+
+Mi definición:
+* Debe ser ágil y dinámico de crear => Interpretado + Editor de texto.
 * Scripting = comandos del sistema + _"algo que los una de forma lógica"_
+
+Posibles soluciones:
+1. Ganar más tiempo
+    * GNU/Linux => Bash
+    * Windows => CMD, PowerShell
+1. Cambiar a scripting mutiplataforma. ¿Existe?
+
+Visita a OpenSUSE
