--- a/charlas/ruby/scripting/md/03.md
+++ b/charlas/ruby/scripting/md/03.md
@@ -4,7 +4,6 @@
 * Los **sysadmin/devops** somos programadores... de scripts.
 * Principal objetivo: Automatizar.
 
-
 **Scripting: características**
 
 * Lenguaje interpretado.
@@ -21,14 +20,10 @@ Vamos a seguir aprendiendo con ejemplos reales.
 Viendo código desde los más sencillo y que iremos complicando
 poco a poco.
 
-* [show-info](./03-show-info): Hacer un que muestre alguna información del sistema en pantalla.
-* [do-undo](./04-du-undo): Hacer uns script que cree directorios con determinados permisos.
-* [radar](./05-radar): Hacer un script para "monitorizar" ciertos hosts.
-* [software](./06-software): Configurar nuestra máquina con determinado software.
 
 ---
 
-# ANEXO
+# Enlaces de interés
 
 **Enlaces de interés:**
 * Andrew Mallett (@theurbanpenguin): Ruby Scripting in Linux - See our mini-series of video tutorials!
