--- a/charlas/teuton/eslibre22/md/01.md
+++ b/charlas/teuton/eslibre22/md/01.md
@@ -6,23 +6,53 @@ Viernes 24 (Sala Núñez) 10:30-10:55
 ```
 ![](images/teuton-logo.png)
 
+# 2. Agradecimientos
 
-# 2. Agradecimientos y presentación
+```
+Gracias a la organización **EsLibre22**
+Gracias al equipo Teuton Software
+```
 
-* Gracias a la organización **EsLibre22**
+> Todo lo que vamos a ver está hecho con Software Libre.
 
-> Todo está hecho con Software Libre
+TEUTON
+* Software libre.
+* Multiplataforma.
+* Test de infraestructura.
+
+```
+(1) Revisar nuestra infraestructura
+(2) Los profesores pueden automatizar sus correcciones y realizarlas en remoto
+```
 
 # 3. Presentación
 
 * David Vargas Ruiz
 * Ingeniero Informático por la ULPGC
-* Profesor FP de Sistemas (IES Puerto de la Cruz).
+* Profesor FP de Sistemas y Aplicaciones
 * Ruby, software libre y StarWars.
 
 ![](images/presentacion.png)
 
-# 4. Definición
+# 4. Definición TDD
+
+TDD
+* Desarrollo guiado por pruebas de software.
+* El propósito de TDD es lograr un código limpio que funcione.
+* Garantizar que el software cumple con los requisitos que se han establecido.
+
+```
+Robert C. Martin "Clean Code"
+Carlos Ble "Código sostenible"
+```
+
+# 5. Ejemplo TDD
+
+
+# 6. Programame
+
+![programame](images/programame.png)
+
 
 # Agenda
 
