--- a/charlas/teuton/eslibre22/md/01.md
+++ b/charlas/teuton/eslibre22/md/01.md
@@ -2,28 +2,21 @@
 # TEUTON: Test de infraestructura
 
 ```
-Viernes 24 (Sala Núñez) 10:30-10:55
+Fecha : Viernes 24
+Lugar : Sala Núñez
+Hora  : 10:30-10:55
 ```
 ![](images/teuton-logo.png)
 
 # 2. Agradecimientos
 
-```
-Gracias a la organización **EsLibre22**
-Gracias al equipo Teuton Software
-```
+¡Muchas gracias!
 
-> Todo lo que vamos a ver está hecho con Software Libre.
+* Organización **EsLibre22**
+* Equipo Teuton Software
+* Comunidad Teuton de Telegram
 
-TEUTON
-* Software libre.
-* Multiplataforma.
-* Test de infraestructura.
-
-```
-(1) Revisar nuestra infraestructura
-(2) Los profesores pueden automatizar sus correcciones y realizarlas en remoto
-```
+`Todo lo que vamos a ver está hecho con Software Libre`
 
 # 3. Presentación
 
@@ -34,9 +27,24 @@ TEUTON
 
 ![](images/presentacion.png)
 
-# 4. Definición TDD
+# 4. Teuton
 
-TDD
+¿Qué es?
+
+* Programa multiplataforma.
+* Licencia Software libre.
+* Test de infraestructura.
+
+¿Qué resuelve?
+
+1. Revisar nuestra infraestructura
+2. Los profesores pueden automatizar sus correcciones y realizarlas en remoto
+
+
+# 5. TDD
+
+Defnición
+
 * Desarrollo guiado por pruebas de software.
 * El propósito de TDD es lograr un código limpio que funcione.
 * Garantizar que el software cumple con los requisitos que se han establecido.
@@ -46,7 +54,7 @@ Robert C. Martin "Clean Code"
 Carlos Ble "Código sostenible"
 ```
 
-# 5. Ejemplo TDD
+# 6. Ejemplo TDD
 
 
 # 6. Programame
