--- a/examples/ruby/01.holamundo/docs/a-brief-introduction/1.1.hello.md
+++ b/examples/ruby/01.holamundo/docs/a-brief-introduction/1.1.hello.md
@@ -4,6 +4,7 @@
 
 > Enlace de interés:
 > * https://markm208.github.io/rubybook/chapter1/01/index.html
+> * Example: [files/01.rb](files/01.rb)
 
 En este programa, mostraré algunos de los conceptos básicos de Ruby, incluido cómo ejecutar un programa e imprimirlo en la pantalla.
 
