--- a/examples/ruby/16.metaprog/todo.txt
+++ b/examples/ruby/16.metaprog/todo.txt
@@ -1,4 +1,7 @@
 
+Monkey-patching: Messing with your Ruby methods
+https://t.co/qizJt4WunE?s=35
+
 Monkey patching is a dynamic feature that basically refers to the ability to have classes open all the time
 https://twitter.com/the_ruby_dev/status/1620710799596552193?t=y7hrE-SeQdPWnPfzdh3bAA&s=35
 
