--- a/examples/ruby/16.metaprog/todo.txt
+++ b/examples/ruby/16.metaprog/todo.txt
@@ -1,4 +1,7 @@
 
+https://twitter.com/gregnavis/status/1619335102919761921?t=gvy4HcZi3GWFqQW8IGQeeg&s=35
+Greg Navis Ruby tip: don't rely on libraries calling refinement-provided methods
+
 Monkey-patching: Messing with your Ruby methods
 https://t.co/qizJt4WunE?s=35
 
